# MetObs_GUI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  user-history.db
.github/workflows/: master_test.yml  os_istall_test.yml  os_pip_install_test.yml
.spyproject/config/: workspace.ini
deploiment/: build_and_test.sh  deploy_to_pypi.sh  gui_launch_test_log
development/: activate_testing_env.sh  codeing_tests.py  create_develop_env.sh  dummy.html  environment.yml  htmltest.py  install_env  local_launch.py  pyqt_testing.py  test.ui
metobs_gui/: __init__.py  analysis_page.py  basic_fig.ui  common_functions.py  create_new_obstype.ui  create_new_unit.ui  data_func.py  dataframelab.py  dialog_launcher.py  dummy.ui  errors.py  extra_windows.py  figuremodel.py  fill_page.py  gui_settings_page.py  html.ui  import_data_page.py  interactive_spatial_dialog.py  interactive_spatial_map.ui  last_attempt.ui  log_displayer.py  main.py  mainwindow.ui  map_column_dialog.ui  metadata_page.py  modeldata_fig_window.ui  modeldata_page.py  path_handler.py  pretty_formatter.py  qc_page.py  save_gui_vals.json  templ_build.ui  template_func.py  template_mapping.py  template_page.py  test_gui.ui  test_gui2.ui  tlk_scripts.py
metobs_gui/cache/: custom_template.csv  saved_paths.json
metobs_gui/cache/datasets/: demo_WOW.pkl
metobs_gui/cache/modeldata/: 3.pkl  demo.pkl  last.pkl  my_modeldata.pkl
metobs_gui/cache/templates/: WOW_demo_template.csv  custom_template_24.csv  custom_template_test.csv  demo_template.csv  minimal_template.csv  template_amsterdam.csv  v3_template.csv
metobs_gui/gee_page/: gee_page.py
metobs_gui/gf_page/: debias_modeldata_settings_dialog.ui  diurnal_debias_modeldata_settings_dialog.ui  gf_page.py  interpolation_settings_dialog.ui  raw_modeldata_settings_dialog.ui  settingsdialog.py  weighted_diurnal_debias_modeldata_settings_dialog.ui
metobs_gui/import_data_page/: import_data_page.py
metobs_gui/qc_page/: qc_page.py
metobs_gui/qt_windows/: fig_window.ui  html_map.ui  interpolation_settings_dialog.ui  logs_dialog.ui  mainwindow.ui  new_obstype_dialog.ui  new_unit_dialog.ui  show_data_dialog.ui  show_metadata_dialog.ui  templ_build_data.ui  templ_build_meta_data.ui  timeseries_plot_dialog.ui  untitled.ui
metobs_gui/template_page/: template_mapping.py  template_page.py
metobs_gui/tmp/: metadata_html.html  template.csv
tests/push_test/: gui_launch_test.py
