[tool.poetry]
name = "MetObs-GUI"
version = "0.0.1"
description = "A GUI for the MetObs-toolkit"
authors = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
maintainers = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
license = "LICENSE"
readme = "README.md"
documentation = "https://python-poetry.org/docs/"
packages = [{include = "metobs_gui"}]
keywords = ["meteorology", "observations", "urban climate", "GUI"]



[tool.poetry.dependencies]
# Get the latest revision on the branch named "next"
#requests = { git = "https://github.com/vergauwenthomas/MetObs_toolkit.git", branch = "master"}
python = "^3.9"
PyQt5 = "=5.12.2" #Technical: this version is the latest to build from source
#pyQt5 = "^5.12.2" # This installs Version 5.15.9, which works
#pyqt5.15.9 installs--> PyQt5-Qt5 >=5.15.2 and +PyQt5-sip = ">=12.11,<13"
#pyqt5-sip = "^12.12.1"
#pyqt5-qt5 = "^5.15.2"

#pyqt5-sip = "^12.12.1"
#pyqt5-qt5 = "^5.15.2"
#metobs-toolkit = {git = "https://github.com/vergauwenthomas/MetObs_toolkit.git", rev = "master"}
metobs-toolkit = { git = "https://github.com/vergauwenthomas/MetObs_toolkit.git", branch = "dev"}
#pyqt5 = "^5.15.9"




[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
