[tool.poetry]
name = "MetObs-GUI"
version = "0.0.1a0"
description = "A GUI for the MetObs-toolkit"
authors = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
maintainers = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
license = "LICENSE"
readme = "README.md"
documentation = "https://python-poetry.org/docs/"
packages = [{include = "metobs_gui"}]
keywords = ["meteorology", "observations", "urban climate", "GUI"]



[tool.poetry.dependencies]
# Get the latest revision on the branch named "next"
#requests = { git = "https://github.com/vergauwenthomas/MetObs_toolkit.git", branch = "master"}
python = "^3.9"
PyQt5 = "=5.12.3" #Technical: this version is the latest to build from source
PyQtWebEngine = "~5.12.1"
metobs_toolkit = "0.1.2"

#metobs-toolkit = {git = "https://github.com/vergauwenthomas/MetObs_toolkit.git", rev = "master"}




[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
