[tool.poetry]
name = "MetObs-GUI"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
version = "0.4.0a0"
description = "A GUI for the MetObs-toolkit"
authors = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
maintainers = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
license = "LICENSE"
readme = "README.md"
documentation = "https://python-poetry.org/docs/"
packages = [{include = "metobs_gui"}]
keywords = ["meteorology", "observations", "urban climate", "GUI"]



[tool.poetry.dependencies]
python = "^3.9" #sync with toolkit
PyQt5 = "^5.12"
# PyQt5 = "=5.12.3" #Technical: this version is the latest to build from source
# PyQtWebEngine = "~5.12.1"
metobs_toolkit = {git = "https://github.com/vergauwenthomas/MetObs_toolkit.git", branch = "refactor_classes"}





[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
pre-commit = "^3.8.0"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
